--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,6 @@
 body{
   font-family: Pokemon GB, Arial;
   font-size: 18px;
-  zoom: 1.75;
   background: url(images/pokemonbg.jpg);
   background-repeat: none;
   background-repeat: no-repeat;
@@ -14,7 +13,7 @@ body{
 button{
     border: none;
     background-color: transparent;
-    color: transparent;
+    color: #000000;
     width: 40px;
 }
 
@@ -39,72 +38,84 @@ audio{
   display: none;
 }
 #bg_image{
-  position: relative;
-  width: 556px;
-  height: 371px;
+  position: absolute;
+  width: 100%;
+  height: auto;
   margin-right: auto;
   margin-left: auto;
   margin-top: 5%;
 
 }
 #player{
-  position: absolute;
+  position: fixed;
   height:110px;
   width:100%;
   margin-top:158px;
-  display:
+  top: 25%;
+  left: 0%;
 }
 #player_img{
-    position: absolute;
+  position: fixed;
   width:0px;
   height:0px;
-  left: 5px;
-  margin-left: 0px;
-  top:-78px;
+  left: 52%;
+  margin-left: -260px;
+  top:35%;
   transition: transform 2.5s;
 }
 #player p{
-  margin-left: 295px;
+  margin-left: 52%;
   margin-bottom:0;
   margin-top:0;
+  top: 300px;
+
 }
 #player .name{
   margin-top:40px;
 }
 #enemy{
-  position: absolute;
-  top:-20px;
+  position: fixed;
+  top:20%;
+  left: 20%;
   width:300px;
 }
+.health{
+  margin-top: 35px;
+}
 #enemy p{
-  margin-left: 70px;
-  margin-bottom:0;
-  margin-top:0;
+  position: fixed;
+  width:0px;
+
+  height:10px;
+  left: 54%;
+  margin-left: -240px;
+  top:22%;
+  transition: transform .5s;
 }
 #enemy_img{
-  position: absolute;
-  width:0px;
+  position: fixed;
+  width:0px ;
   height:0px;
-  left: 335px;
+  left: 54%;
   margin-left: 0px;
-  top:0px;
+  top:25%;
   transition: transform .5s;
 }
 #status_text{
-  position: absolute;
-  height:45px;
-  width:45%;
-  text-align: center;
-  left:5%;
-  top:290px;
+  position: fixed;
+  width:0px;
+  min-width: 110px;
+  left:50%;
+  margin-left: -200px;
+  top:63%;
   color:black;
 }
 #menubg{
-  position: absolute;
-  width:247px;
+  position: fixed;
+  width:298px;
   text-align: center;
-  left:51%;
-  top:273px;
+  left:47%;
+  top:461px;
   color:black;
 }
 #attackbar{
@@ -130,40 +141,40 @@ audio{
 #attack1_btn{
   cursor: pointer;
   color: black;
-  position: absolute;
-  left:55%;
+  position: fixed;
+  left:52%;
   width:80%;
-  top:272px;
+  top:60%;
   z-index: 5;
   display: all;
 }
 #attack2_btn{
   cursor: pointer;
   color: black;
-  position: absolute;
-  left:55%;
+  position: fixed;
+  left:52%;
   width:80%;
-  top:296px;
+  top:63%;
   z-index: 5;
    display: all;
 }
 #attack3_btn{
   cursor: pointer;
   color: black;
-  position: absolute;
-  left:55%;
+  position: fixed;
+  left:52%;
   width:80%;
-  top:320px;
+  top:66%;
   z-index: 5;
    display: all;
 }
 #attack4_btn{
   cursor: pointer;
   color: black;
-  position: absolute;
-  left:55%;
+  position: fixed;
+  left:52%;
   width:80%;
-  top:344px;
+  top:69%;
   z-index: 5;
    display: all;
 }
